Make errors appear in a better way in those forms.

--- a/client/dev/partials/indicators/edit-formula.html
+++ b/client/dev/partials/indicators/edit-formula.html
@@ -1,5 +1,5 @@
 
-<div ng-form name="formulaForm" class="formula" ng-class="{error: formulaForm.$invalid}">
+<div ng-form name="formulaForm">
 	<table class="table table-bordered table-condensed">
 		<thead>
 			<td></td>
