--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -83,7 +83,7 @@
 				<tr>
 					<td translate="shared.name"></td>
 					<td ng-repeat="(code, language) in languages">
-						<textarea class="form-control" required ng-model="indicator.name[code]" placeholder="{{translations[code].indicator.name_ph}}"></textarea>
+						<textarea class="form-control" name="someName" required ng-model="indicator.name[code]" placeholder="{{translations[code].indicator.name_ph}}"></textarea>
 					</td>
 				</tr>
 				<tr>
