--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -355,3 +355,11 @@ tr.indent3 > td:first-child { padding-left: 75px; }
 .formula.error {
   border-color: darkred;
 }
+
+
+.form-control.ng-invalid.ng-touched {
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
