--- a/client/dev/partials/projects/logframe/edit.html
+++ b/client/dev/partials/projects/logframe/edit.html
@@ -261,22 +261,18 @@
 								<div class="form-group">
 									<label class="col-sm-2 control-label" translate="project.activities"></label>
 									<div class="col-sm-10">
-										<ng-form name="activityForm" ng-repeat="activity in output.activities">
-											<div class="form-group" show-errors style="margin: 0; padding:0">
-												<div class="input-group" style="margin-bottom: 5px; ">
-													<input type="text"
-														   class="form-control"
-														   name="description"
-														   placeholder="{{'project.activity_desc_ph'|translate}}"
-														   ng-model="activity.description"
-														   required/>
+										<div class="input-group" style="margin-bottom: 5px; " ng-repeat="activity in output.activities">
+											<input type="text"
+												   class="form-control"
+												   name="description"
+												   placeholder="{{'project.activity_desc_ph'|translate}}"
+												   ng-model="activity.description"
+												   required/>
 
-													<span class="input-group-btn">
-														<a class="btn btn-danger ng-scope" ng-click="removeActivity(activity, output)" translate="shared.remove">Retirer</a>
-													</span>
-												</div>
-											</div>
-										</ng-form>
+											<span class="input-group-btn">
+												<a class="btn btn-danger ng-scope" ng-click="removeActivity(activity, output)" translate="shared.remove">Retirer</a>
+											</span>
+										</div>
 
 										<p acl-has-project-role="owner" class="form-control-static">
 											<a ng-click="addActivity(output)" translate="project.add_activity"></a>
