--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -9,24 +9,19 @@
 
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
-						<a ui-sref="main.project.logical_frame({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.logical_frame" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-building-o fa-fw"></i>
 							<span translate="shared.logical_frame"></span>
 						</a>
 
-						<a ui-sref="main.project.input_entities({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.input_entities" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-map-marker fa-fw"></i>
 							<span translate="shared.input_entities"></span>
 						</a>
 
-						<a ui-sref="main.project.input_groups({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.input_groups" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-map-marker fa-fw"></i>
 							<span translate="shared.input_groups"></span>
-						</a>
-
-						<a ui-sref="main.project.forms({projectId: project._id})" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
-							<i class="fa fa-clock-o fa-fw"></i>
-							<span translate="project.input_forms"></span>
 						</a>
 
 						<a ui-sref="main.project.user_list" ui-sref-active="active" class="list-group-item">
@@ -39,8 +34,40 @@
 						<a class="list-group-item active"><i class="fa fa-building-o fa-fw"></i> <span translate="shared.logical_frame"></span></a>
 						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_entities"></span></a>
 						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_groups"></span></a>
-						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.input_forms"></span></a>
 						<a class="list-group-item"><i class="fa fa-users fa-fw"></i> <span translate="project.users"></span></a>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="project.raw_data_management"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group" ng-if="project._id">
+
+						<a ui-sref="main.project.forms" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
+							<i class="fa fa-clock-o fa-fw"></i>
+							<span translate="project.input_forms"></span>
+						</a>
+
+						<a ui-sref="main.project.input_list" class="list-group-item" ng-class="{active: $state.is('main.project.input_list') || $state.is('main.project.input')}">
+							<i class="fa fa-pencil fa-fw"></i>
+							<span translate="project.inputs"></span>
+						</a>
+
+						<a ui-sref="main.project.raw_data_reporting" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-line-chart fa-fw"></i>
+							<span translate="shared.reporting"></span>
+						</a>
+
+					</div>
+
+					<div class="list-group" ng-if="!project._id">
+						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.input_forms"></span></a>
+						<a class="list-group-item"><i class="fa fa-pencil fa-fw"></i> <span translate="project.inputs"></span></a>
+						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
 					</div>
 				</div>
 			</div>
@@ -53,29 +80,49 @@
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
 
-						<a ui-sref="main.project.input_list({projectId: project._id})" class="list-group-item" ng-class="{active: $state.is('main.project.input_list') || $state.is('main.project.input')}">
-							<i class="fa fa-pencil fa-fw"></i>
-							<span translate="project.inputs"></span>
+						<a ui-sref="main.project.indicator_selection" ui-sref-active="active" class="list-group-item">
+							<i class="fa fa-bullseye fa-fw"></i>
+							<span translate="project.indicator_selection"></span>
 						</a>
 
-						<a ui-sref="main.project.reporting({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.indicators_reporting" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
 
-						<!-- <a ui-sref="main.project.reporting_analysis_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.reporting_analysis_list" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-lightbulb-o fa-fw"></i>
 							<span translate="shared.reporting_analysis"></span>
-						</a> -->
+						</a>
+
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item"><i class="fa fa-pencil fa-fw"></i> <span translate="project.inputs"></span></a>
+						<a class="list-group-item"><i class="fa fa-bullseye fa-fw"></i> <span translate="project.indicator_selection"></span></a>
 						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
-						<!-- <a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a> -->
+						<a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a>
 					</div>
 				</div>
 			</div>
+
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="project.security"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group" ng-if="project._id">
+
+
+					</div>
+
+					<div class="list-group" ng-if="!project._id">
+					</div>
+				</div>
+			</div>
+
+
 		</div>
 	</div>
 
