--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -42,21 +42,26 @@
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
 
-						<a ui-sref="main.project.forms" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
-							<i class="fa fa-clock-o fa-fw"></i>
-							<span translate="project.input_forms"></span>
+						<a ui-sref="main.project.automatic_input_list"
+						   ng-class="{active:$state.is('main.project.automatic_input_list')}"
+						   class="list-group-item">
+							
+							<i class="fa fa-cloud fa-fw"></i>
+							<span translate="project.automatic_input"></span>
 						</a>
 
-						<a ui-sref="main.project.input_list" class="list-group-item" ng-class="{active: $state.is('main.project.input_list') || $state.is('main.project.input')}">
+						<a ui-sref="main.project.manual_input_list"
+						   class="list-group-item"
+						   ng-class="{active: $state.is('main.project.manual_input_list') || $state.is('main.project.manual_input_data') || $state.is('main.project.manual_input_structure')}">
+							
 							<i class="fa fa-pencil fa-fw"></i>
-							<span translate="project.inputs"></span>
+							<span translate="project.manual_input"></span>
 						</a>
 
 						<a ui-sref="main.project.raw_data_reporting" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
-
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
@@ -74,7 +79,6 @@
 
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
-
 						<a ui-sref="main.project.indicator_selection" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-bullseye fa-fw"></i>
 							<span translate="project.indicator_selection"></span>
@@ -89,13 +93,21 @@
 							<i class="fa fa-lightbulb-o fa-fw"></i>
 							<span translate="shared.reporting_analysis"></span>
 						</a>
-
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item"><i class="fa fa-bullseye fa-fw"></i> <span translate="project.indicator_selection"></span></a>
-						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
-						<a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a>
+						<a class="list-group-item">
+							<i class="fa fa-bullseye fa-fw"></i>
+							<span translate="project.indicator_selection"></span>
+						</a>
+						<a class="list-group-item">
+							<i class="fa fa-line-chart fa-fw"></i>
+							<span translate="shared.reporting"></span>
+						</a>
+						<a class="list-group-item">
+							<i class="fa fa-lightbulb-o fa-fw"></i>
+							<span translate="shared.reporting_analysis"></span>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -105,21 +117,17 @@
 					<div class="list-group">
 						<a class="list-group-item" ng-if="project._id" ui-sref="main.project.export" ui-sref-active="active">
 							<i class="fa fa-fw fa-file-excel-o"></i>
-							Export
+							<span translate="shared.export"></span>
 						</a>
 						<a class="list-group-item" ng-if="!project._id">
 							<i class="fa fa-fw fa-file-excel-o"></i>
-							Export
+							<span translate="shared.export"></span>
 						</a>
-
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
-
-
 
 	<div class="col-md-10 print-full-width" ui-view></div>
 </div>
