--- a/client/dev/partials/admin/menu.html
+++ b/client/dev/partials/admin/menu.html
@@ -19,6 +19,12 @@
 					<span translate="indicator.types"></span>
 				</a>
 			</li>
+			<li ng-class="{active: $state.is('main.admin.client_list') || $state.is('main.admin.client')}">
+				<a ui-sref="main.admin.client_list">
+					<i class="fa fa-filter fa-fw"></i>
+					<span translate="client.clients"></span>
+				</a>
+			</li>
 		</ul>
 	</div>
 
