--- a/client/dev/partials/admin/menu.html
+++ b/client/dev/partials/admin/menu.html
@@ -21,7 +21,7 @@
 			</li>
 			<li ng-class="{active: $state.is('main.admin.client_list') || $state.is('main.admin.client')}">
 				<a ui-sref="main.admin.client_list">
-					<i class="fa fa-filter fa-fw"></i>
+					<i class="fa fa-tablet fa-fw"></i>
 					<span translate="client.clients"></span>
 				</a>
 			</li>
