--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -26,28 +26,38 @@
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item active"><i class="fa fa-building-o fa-fw"></i> <span translate="shared.logical_frame"></span></a>
-						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_entities"></span></a>
-						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_groups"></span></a>
-						<a class="list-group-item"><i class="fa fa-users fa-fw"></i> <span translate="project.users"></span></a>
+						<a class="list-group-item">
+							<i class="fa fa-building-o fa-fw"></i>
+							<span translate="shared.logical_frame"></span>
+						</a>
+
+						<a class="list-group-item">
+							<i class="fa fa-map-marker fa-fw"></i>
+							<span translate="shared.input_entities"></span>
+						</a>
+
+						<a class="list-group-item">
+							<i class="fa fa-users fa-fw"></i>
+							<span translate="project.users"></span>
+						</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title" translate="project.raw_data_management"></h4>
+					<h4 class="panel-title" translate="project.aggregated_data_management"></h4>
 				</div>
 
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
 
-						<a ui-sref="main.project.automatic_input_list"
-						   ng-class="{active:$state.is('main.project.automatic_input_list')}"
+						<a ui-sref="main.project.external_input_list"
+						   ng-class="{active:$state.is('main.project.external_input_list')}"
 						   class="list-group-item">
 							
-							<i class="fa fa-cloud fa-fw"></i>
-							<span translate="project.automatic_input"></span>
+							<i class="fa fa-tablet fa-fw"></i>
+							<span translate="project.external_input"></span>
 						</a>
 
 						<a ui-sref="main.project.manual_input_list"
@@ -58,16 +68,27 @@
 							<span translate="project.manual_input"></span>
 						</a>
 
-						<a ui-sref="main.project.raw_data_reporting" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.project.aggregated_data_reporting" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.input_forms"></span></a>
-						<a class="list-group-item"><i class="fa fa-pencil fa-fw"></i> <span translate="project.inputs"></span></a>
-						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
+						<a class="list-group-item">
+							<i class="fa fa-cloud fa-fw"></i>
+							<span translate="project.external_input"></span>
+						</a>
+
+						<a class="list-group-item">
+							<i class="fa fa-pencil fa-fw"></i>
+							<span translate="project.manual_input"></span>
+						</a>
+
+						<a class="list-group-item">
+							<i class="fa fa-line-chart fa-fw"></i>
+							<span translate="shared.reporting"></span>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -114,7 +135,7 @@
 
 			<div class="panel panel-default">
 				<div class="panel-collapse">
-					<div class="list-group">
+					<div class="list-group" ng-if="project._id">
 						<a class="list-group-item" ng-if="project._id" ui-sref="main.project.export" ui-sref-active="active">
 							<i class="fa fa-fw fa-file-excel-o"></i>
 							<span translate="shared.export"></span>
